@@ -1,3 +1,8 @@
+2008-02-28  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* data/totem.ui: Back-out some of the changes in revision 5187,
+	as they accidentally broke string freeze. (Reopens: #454642)
+
 2008-02-27  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c
